adding new tables and amending models for beer xml output

--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -291,6 +291,7 @@
 
                     </div>
                     <table class="table">
+                        <tr><td colspan="2"><a href="#" data-bind="click: $parent.beerXml">Export to Beer XML</a></td></tr>
                         <tr><td>Source</td><td data-bind="text: source2"></td></tr>
                         <tr><td>Recipe No</td><td data-bind="text: number"></td></tr>
                         <tr data-bind="css: yeastCss"><td>Yeast</td><td data-bind="text: yeastName"></td></tr>
