--- a/Beer/Content/Site.css
+++ b/Beer/Content/Site.css
@@ -13,14 +13,14 @@
     background: #428bca;
 }
 
-    .page-header h2 {
-        margin-bottom: 0px;
-        margin-top: 10px;
-    }
+.page-header h2 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
 
-    .page-header .form-group {
-        margin-bottom: 0px;
-    }
+.page-header .form-group {
+    margin-bottom: 0px;
+}
 
 .remove-padding-right {
     padding-right: 0px;
@@ -39,7 +39,9 @@
     margin: 0;
 }
 
-.no-margin{margin:0px;}
+.no-margin {
+    margin: 0px;
+}
 
 .extra-padding {
     padding-bottom:12px;
@@ -66,11 +68,22 @@
     padding-bottom: 50px;
 }
 
-.sort .form-group{width:100%;}
+.sort .form-group {
+    width: 100%;
+}
 
-.sort select{margin-right:5%;width:auto;}
+.sort select {
+    margin-right: 5%;
+    width: auto;
+}
 
-@media (max-width: 767px) {
+.round-icon{
+    width:30px;
+    height:30px;
+    margin-right:5px;
+}
+
+@media (max-width: 1169px) {
     .slider-cont {
         padding-left: 30px;
         padding-top: 15px;
@@ -92,20 +105,20 @@
 
 .slidein {
     position: relative;
+    overflow:hidden;
 }
-
-    .slidein .slidein-child {
-    }
 
 .table > tbody > tr > td.nested {
     padding: 0;
 }
 
 .table-nested {
-    margin-bottom:0;
+    margin-bottom: 0;
+    background-color: rgba(211, 216, 193, 0.4);
 }
+
 table.table-nested:first-child tr:first-child td:first-child {
-    border-top:0px;
+    /*border-top:0px;*/
 }
 
 .rounded-back:before {
@@ -117,52 +130,43 @@ table.table-nested:first-child tr:first-child td:first-child {
     margin-right: 5px;
 }
 
-@media screen and (max-width: 767px) {
+.ebcBlob{
+    width:18px;
+    height:18px;
+    border-radius:9px;
+    float:left;
+    margin-right:5px;
+}
+
+@media screen and (max-width: 1169px) {
     .slidein .slidein-child {
         position: absolute;
         top: 0px;
-        right: 0;
         width: 100%;
         right: -110%;
-        -webkit-transition-timing-function: ease;
-        -o-transition-timing-function: ease;
-        transition-timing-function: ease;
-        -webkit-transition-duration: 0.5s;
-        -o-transition-duration: 0.5s;
-        transition-duration: 0.5s;
-        -webkit-transition-property: right;
-        -o-transition-property: right;
-        transition-property: right;
+        transition:right 0.5s ease; 
     }
 
     .slidein .slidein-master {
         width: 100%;
-        -webkit-transition-timing-function: ease;
-        -o-transition-timing-function: ease;
-        transition-timing-function: ease;
-        -webkit-transition-duration: 0.5s;
-        -o-transition-duration: 0.5s;
-        transition-duration: 0.5s;
-        -webkit-transition-property: left;
-        -o-transition-property: left;
-        transition-property: left;
+        left:0;
+        transition: left 0.5s ease, height 0s ease 0.5s;
+        height:auto;
     }
 
-    .slidein .slidein-child.slidingin {
+    .slidein .slidein-child.slideshow {
         right: 0px;
     }
 
-    .slidein .slidein-child.slidingout {
-        right: -110%;
-    }
-
-    .slidein .slidein-master.slidingout {
+    .slidein .slidein-master.slidehide {
         left: -110%;
+        height: 0px;
+        transition: left 0.5s ease, height 0s ease;
     }
+}
 
-    .slidein .slidein-master.slidingin {
-        left: 0px;
-    }
+.show-overflow{
+    overflow:visible;
 }
 
 .spinner {
@@ -172,25 +176,25 @@ table.table-nested:first-child tr:first-child td:first-child {
     display:none;
 }
 
-    .spinner > div {
-        width: 18px;
-        height: 18px;
-        background-color: #333;
-        border-radius: 100%;
-        display: inline-block;
-        -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-        animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    }
+.spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #333;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
 
-    .spinner .bounce1 {
-        -webkit-animation-delay: -0.32s;
-        animation-delay: -0.32s;
-    }
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
 
-    .spinner .bounce2 {
-        -webkit-animation-delay: -0.16s;
-        animation-delay: -0.16s;
-    }
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
 
 @-webkit-keyframes sk-bouncedelay {
     0%, 80%, 100% {
@@ -212,4 +216,44 @@ table.table-nested:first-child tr:first-child td:first-child {
         -webkit-transform: scale(1.0);
         transform: scale(1.0);
     }
+}
+
+.min-350{
+    min-width:380px;
+}
+
+.min-155 {
+    min-width: 155px;
+}
+
+.beer-style{
+    margin:0 auto;
+    width:350px;
+    text-align: center;
+}
+
+.bs-info{
+    width:20%;
+    float:left;
+}
+
+.bs-line {
+    margin: 0 auto;
+    background-color: #e9ece0;
+    width: 15px;
+    height: 200px;
+    position: relative;
+}
+
+.bs-range{
+    position:absolute;
+    background-color:#575f3b;
+    width:15px;
+}
+
+.bs-recipe{
+    height:2px;
+    position:absolute;
+    background-color: #febd01;
+    width:15px;
 }
